--- a/package.json
+++ b/package.json
@@ -11,17 +11,37 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "add": "^2.0.6",
     "axios": "^1.6.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "lottie-ios": "^4.3.4",
+    "lottie-react-native": "^6.5.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-animated-loader": "^1.0.0",
+    "react-native-device-info": "^10.12.0",
+    "react-native-draggable": "^3.3.0",
     "react-native-drax": "^0.10.3",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-haptic-feedback": "^2.2.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-popover-view": "^5.1.8",
+    "react-native-popper": "^0.3.2",
     "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-webview": "^13.6.3",
+    "react-navigation": "^5.0.0",
+    "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.0.1",
     "redux": "^5.0.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-promise-middleware": "^6.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
