--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.72.7",
     "react-native-animated-loader": "^1.0.0",
     "react-native-device-info": "^10.12.0",
+    "react-native-document-picker": "^9.1.0",
     "react-native-draggable": "^3.3.0",
     "react-native-drax": "^0.10.3",
     "react-native-gesture-handler": "^2.14.0",
@@ -41,7 +42,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
