--- a/ios/IILPaymentDashboard/Info.plist
+++ b/ios/IILPaymentDashboard/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>IILPaymentDashboard</string>
+	<string>Eazy Payments</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
